traces/bug_653.txt
src/medit/stream.c:857: error: DEAD_STORE
  The value written to &norm (type double) is never used.
Showing all 1 steps of the trace


src/medit/stream.c:857:3: Write of unused value
855.     k = locateTria(mesh,nsdep,++mesh->mark,xp1,cb);
856.     if ( !k )  return(0);
857.     norm = field2DInterp(mesh,k,cb,v1);
         ^
858.     pt = &mesh->tria[k];
859.     pt->cpt--;
